Fix post navigation alignment

--- a/style.css
+++ b/style.css
@@ -2237,8 +2237,8 @@ span.page-numbers {
         display: flex; } }
 
 .blog .navigation {
-  --block-content-start: ws;
-  --block-content-end: we; }
+  --block-content-start: ws !important;
+  --block-content-end: we !important; }
 
 .post-navigation {
   --current-arrow-padding: calc(0.4em + 1.15em);
